--- a/_posts/welcome/welcome.Rmd
+++ b/_posts/welcome/welcome.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "Welcome to Blog"
 description: |
-  I will show some infomation about covid-19 in Honduras, the data come from package `tidycovid19`. It contains the COVID data since Jan 2020. The source of data comes from mutiple website, such as the Johns Hopkins University CSSE Github Repo and the European Centre for Disease Prevention and Control. We can find more information from the [github](https://github.com/joachim-gassen/tidycovid19). In addition to, I put the websit of World Health Organization. 
+  Package information and data discription
 author:
   - name: Ruiqi Tang 
     url: https://example.com/norajones
@@ -21,5 +21,10 @@ knitr::opts_chunk$set(echo = FALSE)
 
 ```
 
+  I will show some infomation about covid-19 in Honduras, the data come from package `tidycovid19`. It contains the COVID data since Jan 2020. The source of data comes from mutiple website, such as the Johns Hopkins University CSSE Github Repo and the European Centre for Disease Prevention and Control. We can find more information from the [github](https://github.com/joachim-gassen/tidycovid19). In addition to, I put the websit of World Health Organization. There are more infromation about 
+
+\
+
+<img src="covid-19-welcome.jpeg">
 
 
