--- a/about.Rmd
+++ b/about.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "About this blog"
 description: |
-  For this blog, I will show some informtion about the COVID-19 in Honduras
+  For this blog, I will show some informtion about the COVID-19 in Honduras and we may find some interesting things
 ---
 
 ```{r setup, include=FALSE}
