--- a/_posts/2021-09-01-blog1/blog1.Rmd
+++ b/_posts/2021-09-01-blog1/blog1.Rmd
@@ -5,11 +5,39 @@ description: |
 author:
   - name: Ruiqi Tang
     url: https://example.com/norajones
-date: 08-01-2021
+date: 08-30-2021
 output:
   distill::distill_article:
     self_contained: false
 ---
+
+```{css, echo = FALSE}
+.title, .subtitle {
+  text-transform: uppercase;
+  font-family: copperplate;
+}
+.author {
+  font-family: "Times New Roman", Times, serif;
+}
+.date {
+  font-family: papyrus;
+}
+body {
+  background-color: white;
+  color: black;
+  font-size: 20px;
+}
+strong {
+  color: grey;
+}
+.border {
+  border: 5px solid yellow;
+  padding: 5px;
+  border-radius: 5px;
+  background-color: white;
+}
+
+```
 
 I want to show some __Covid-19__ information, and we can look wheter the __Covid-19__ is still very serious in Honduras. Then, we also will find some interest information
 
@@ -63,4 +91,8 @@ This is time series plot. it shows that the the number of confirmed case increas
 
 __Conclusion__
 
-I have shown some table and graph, it looks like that the the confirmed case may continue to increase. it may has a long impact in Honduras.  
+I have shown some table and graph, it looks like that the the confirmed case may continue to increase. it may has a long impact in Honduras.
+
+__Reference__
+
+Demographics of Honduras, Wikipedia, URL: [https://en.wikipedia.org/wiki/Demographics_of_Honduras](https://en.wikipedia.org/wiki/Demographics_of_Honduras)
