--- a/_posts/2021-09-01-blog1/blog1.Rmd
+++ b/_posts/2021-09-01-blog1/blog1.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Blog 1"
+title: "Honduras"
 description: |
-  We will show some tables and graphs, and we will find some interesting finding from those tables and graphs
+  The covid-19 in Honduras
 author:
   - name: Ruiqi Tang
     url: https://example.com/norajones
