--- a/about.Rmd
+++ b/about.Rmd
@@ -42,6 +42,10 @@ My name is Ruiqi Tang majored in the Business Analytics. I am studying the creat
 
 <img src="honduras_sea.jpeg">
 
+For the Blog2 I will talk about the covid-19 in Belgium
+
+<img src="Flag-Belgium.jpeg">
+
 __Reference__
 
 Photo: Flag of Honduras
